; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_util.c_make_program.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_util.c_make_program.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_LINK_STATUS = common dso_local global i32 0, align 4
@GL_FALSE = common dso_local global i64 0, align 8
@GL_INFO_LOG_LENGTH = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"glLinkProgram failed: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @make_program(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = call i32 (...) @glCreateProgram()
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @glAttachShader(i32 %10, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @glAttachShader(i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @glLinkProgram(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @GL_LINK_STATUS, align 4
  %20 = call i32 @glGetProgramiv(i32 %18, i32 %19, i64* %6)
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @GL_FALSE, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %39

24:                                               ; preds = %2
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @GL_INFO_LOG_LENGTH, align 4
  %27 = call i32 @glGetProgramiv(i32 %25, i32 %26, i64* %7)
  %28 = load i64, i64* %7, align 8
  %29 = call i8* @calloc(i64 %28, i32 1)
  store i8* %29, i8** %8, align 8
  %30 = load i32, i32* %5, align 4
  %31 = load i64, i64* %7, align 8
  %32 = load i8*, i8** %8, align 8
  %33 = call i32 @glGetProgramInfoLog(i32 %30, i64 %31, i32* null, i8* %32)
  %34 = load i32, i32* @stderr, align 4
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @fprintf(i32 %34, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %35)
  %37 = load i8*, i8** %8, align 8
  %38 = call i32 @free(i8* %37)
  br label %39

39:                                               ; preds = %24, %2
  %40 = load i32, i32* %5, align 4
  %41 = load i32, i32* %3, align 4
  %42 = call i32 @glDetachShader(i32 %40, i32 %41)
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* %4, align 4
  %45 = call i32 @glDetachShader(i32 %43, i32 %44)
  %46 = load i32, i32* %3, align 4
  %47 = call i32 @glDeleteShader(i32 %46)
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @glDeleteShader(i32 %48)
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local i32 @glCreateProgram(...) #1

declare dso_local i32 @glAttachShader(i32, i32) #1

declare dso_local i32 @glLinkProgram(i32) #1

declare dso_local i32 @glGetProgramiv(i32, i32, i64*) #1

declare dso_local i8* @calloc(i64, i32) #1

declare dso_local i32 @glGetProgramInfoLog(i32, i64, i32*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @glDetachShader(i32, i32) #1

declare dso_local i32 @glDeleteShader(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
